Fixed a few typos and included correct data source for each Table

--- a/reports/sections/threats/ThreatMitigation.Rmd
+++ b/reports/sections/threats/ThreatMitigation.Rmd
@@ -9,13 +9,11 @@ bibliography: '`r here::here("app/data/mybiblio.bib")`'
 ```{r threats-load-common, child = here::here("reports/sections/commonSections/commonIntro.Rmd")}
 ``` 
 
-
 ```{r threats-load, include=FALSE}
 load_rdata(c("threats_rr"), regionStr, env = environment())
-```
-
+``` 
+ 
 ### **Species at Risk: Threats and Mitigation**
-
 This section of the Report represents a literature review conducted by Stephen Finnis in December 2021 in an attempt to compile and summarize the available threat and mitigation information for aquatic species at risk within the DFO Maritimes region. Together, threats and threat mitigation are important for aiding species recovery, and are addressed at various stages in the SARA recovery planning process, the multi-step approach for providing legal protection for species at risk. This process is complex, and many challenges arise when attempting to compile this information in a standardized manner that is comparable for all species. This section therefore summarizes the recovery planning process and provides an overview of the various parties involved, steps, and documents created, with an emphasis on threats and threat mitigation. In addition, the documents created by DFO within this process are compiled in this section for each aquatic species at risk (i.e., those assessed by the Committee on the Status of Endangered Wildlife in Canada and/or listed within the Species at Risk Act) observed within the search area.  
 
 The SARA recovery planning process is fundamental to the work of this Report. This section is intended to be expanded upon as the Reproducible Reporting initiative develops. 
@@ -38,10 +36,10 @@ Similar to threats, mitigation measures are not consistently included or charact
 #### ***Overview of the SARA recovery planning process***
 SARA is carried out through the SARA recovery planning process, a multi-step approach aimed at addressing the goals listed above (Figure \@ref(fig:sara-chart)). This process involves various parties, actions, timelines, and documents created at each steps. Each box in the process in Figure \@ref(fig:sara-chart) is explained in more detail, and relevant documents produced by DFO are compiled for aquatic species that have been assessed by COSEWIC (Table \@ref(tab:cosewic-table)) or listed by SARA (Table \@ref(tab:sara-table)) within the search area. The entire Species at Risk Act is included online (<https://laws.justice.gc.ca/eng/acts/S-15.3/FullText.html>) and is summarized in various formats in the literature [@mcdevitt2015_missing, @montgomery2021_role, @newediuk2021_sociopolitical] and government websites (e.g., <https://www.canada.ca/en/environment-climate-change/services/species-risk-act-accord-funding/listing-process/act.html>). 
 
-Although the creation of certain documents is a requirement under SARA, delays in the process are known to occur (@mcdevitt2015_missing). In addition, many species are still under review for the addition to SARA (the full list is included here: <https://www.canada.ca/en/environment-climate-change/services/species-risk-act-accord-funding/listing-process/wildlife-species-amendment-list-schedule-1.html>). Species assessed by COSEWIC but still under consideration for Schedule 1 will therefore likely have a COSEWIC status report and Recovery Potential Assessment, but will not have a Recovery Strategy, Action Plan, or Management Plan. As well, deviations in the process may occur for some species, factors such as the availability of resources at the time. Therefore, not all of the documents listed in Figure \@ref(fig:sara-chart) may be available for each species, despite its designation . Lastly, documents which do not address threats or threat mitigation are not included in this section of the Report (e.g., Response Statements created by the DFO minister). However, these are available on the Species at Risk Registry if required (URLs are provided in Tables \@ref(tab:cosewic-table) and \@ref(tab:sara-table)). 
+Although the creation of certain documents is a requirement under SARA, delays in the process are known to occur [@mcdevitt2015_missing]. In addition, many species are still under review for the addition to SARA (the full list is included here: <https://www.canada.ca/en/environment-climate-change/services/species-risk-act-accord-funding/listing-process/wildlife-species-amendment-list-schedule-1.html>). Species assessed by COSEWIC but still under consideration for Schedule 1 will therefore likely have a COSEWIC status report and Recovery Potential Assessment, but will not have a Recovery Strategy, Action Plan, or Management Plan. As well, deviations in the process may occur for some species, factors such as the availability of resources at the time. Therefore, not all of the documents listed in Figure \@ref(fig:sara-chart) may be available for each species, despite its designation . Lastly, documents which do not address threats or threat mitigation are not included in this section of the Report (e.g., Response Statements created by the DFO minister). However, these are available on the Species at Risk Registry if required (URLs are provided in Tables \@ref(tab:cosewic-table) and \@ref(tab:sara-table)). 
 
 
-```{r sara-chart, fig.cap = "Simplified overview of the recovery planning process under the Canadian Species at Risk Act (adapted from Newediuk et al. (2021) and McDevitte-Irwin et al. (2015)). The documents reviewed for threat information in this review are represented by the orange boxes. Orange boxes represent documents created, blue boxes represent government bodies, and green boxes represent actions taken. More detailed explanations of each box are included in the main text. Letters in white circles refer to SARA designations including EX: extirpated, T: threatened, E: endangered, and SC: special concern. The process reads from left to right, starting with the creation of the COSEWIC Status Report. Where applicable, mandated time frames are shown above the arrows, although the process may experience time delays at various steps [@mcdevitt2015_missing]. Recovery Potential Assessments (RPAs) are typically not created for species with a COSEWIC designation of special concern. Threat Assessments (not shown) are typically created as part the RPA process, and may be created as a separate document. Schedule 1 is the official federal list of wildlife species at risk.", echo=FALSE}
+```{r sara-chart, out.width = "100%", fig.cap = "Simplified overview of the recovery planning process under the Canadian Species at Risk Act (adapted from Newediuk et al. (2021) and McDevitte-Irwin et al. (2015)). The documents reviewed for threat information in this review are represented by the orange boxes. Orange boxes represent documents created, blue boxes represent government bodies, and green boxes represent actions taken. More detailed explanations of each box are included in the main text. Letters in white circles refer to SARA designations including EX: extirpated, T: threatened, E: endangered, and SC: special concern. The process reads from left to right, starting with the creation of the COSEWIC Status Report. Where applicable, mandated time frames are shown above the arrows, although the process may experience time delays at various steps [@mcdevitt2015_missing]. Recovery Potential Assessments (RPAs) are typically not created for species with a COSEWIC designation of special concern. Threat Assessments (not shown) are typically created as part the RPA process, and may be created as a separate document. Schedule 1 is the official federal list of wildlife species at risk.", echo=FALSE}
 knitr::include_graphics(here::here("reports/sections/Threats/SARAFlowchart.jpg"))
 ```
 
@@ -137,13 +135,13 @@ Management Plans included in Table \@ref(tab:sara-table) were obtained for each 
 #### ***SARA Recovery Planning Process documents*** {#threats-results}
 
 ```{r cosewic-table, echo = FALSE, results = "asis"}
-knitr::kable(mtcars[1:5,], align = "l", caption = "Documents containing threat and threat mitigation information for aquatic species that have been assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC) but are not currently listed in Schedule 1. Documents that are formally required by DFO as part of the SARA recovery planning process are provided, for species observed in any of the datasets within this Report  . The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. Some species may have several COSEWIC populations, which may trigger the creation of a separate series of documents for each population. In many of the datasets in this Report, the COSEWIC population may not be known. Instead, documents have been compiled for all COSEWIC populations within the Maritimes region and surrounding area. Readers of the Report should use their best judgment to determine which set of documents may be the most applicable based on the search area. Blank entries in the table may be present for various reasons, for example, the document may still in progress but not yet published, or was not created due to a lack of resources. In addition, some documents may not be required based on the COSEWIC designation. RPAs are typically not created for species with a COSEWIC status of special concern. Typically, only species that have been included in Schedule 1 will have Action Plans. However, multi-species Action Plans have been created by Parks Canada Agency for several National Parks or National Historic Sites and are included in the table, if they are available on the species’ SAR Public Registry. RPA Research Documents may only be available in French for several species found within the Quebec region. The documents and species listed in this table are current as of December 2021. New documents or changes in listings may take place as the recovery planning process progresses.", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+knitr::kable(nonScheduleOne, align = "l", caption = "Documents containing threat and threat mitigation information for aquatic species that have been assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC) but are not currently listed in Schedule 1. Documents that are formally required by DFO as part of the SARA recovery planning process are provided, for species observed in any of the datasets within this Report  . The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. Some species may have several COSEWIC populations, which may trigger the creation of a separate series of documents for each population. In many of the datasets in this Report, the COSEWIC population may not be known. Instead, documents have been compiled for all COSEWIC populations within the Maritimes region and surrounding area. Readers of the Report should use their best judgment to determine which set of documents may be the most applicable based on the search area. Blank entries in the table may be present for various reasons, for example, the document may still in progress but not yet published, or was not created due to a lack of resources. In addition, some documents may not be required based on the COSEWIC designation. RPAs are typically not created for species with a COSEWIC status of special concern. Typically, only species that have been included in Schedule 1 will have Action Plans. However, multi-species Action Plans have been created by Parks Canada Agency for several National Parks or National Historic Sites and are included in the table, if they are available on the species’ SAR Public Registry. RPA Research Documents may only be available in French for several species found within the Quebec region. The documents and species listed in this table are current as of December 2021. New documents or changes in listings may take place as the recovery planning process progresses.", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 
 ```
 
 
 ```{r sara-table, echo = FALSE, results = "asis"}
-knitr::kable(mtcars[1:5,], align = "l", caption = "Documents containing threat and threat mitigation information for aquatic species that are listed in Schedule 1, if they have been observed in any of the datasets within this Report. Documents included are those formally required by DFO as part of the SARA recovery planning process are provided. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. Some species may have several COSEWIC populations, which may trigger the creation of a separate series of documents for each population. In many of the datasets in this Report, the COSEWIC population may not be known. Instead, documents have been compiled for all COSEWIC populations within the Maritimes region and surrounding area. Readers of the Report should use their best judgment to determine which set of documents may be the most applicable based on the search area. Blank entries in the table may be present for various reasons, for example, the document may still in progress but not yet published, or was not created due to a lack of resources. In addition, some documents may not be required based on the COSEWIC designation. RPAs are typically not created for species with a COSEWIC status of special concern. Recovery Strategies and Action Plans are created for species with a SARA designation of threatened, extirpated or endangered, while Management Plans are instead created for species with a SARA designation of special concern. RPA Research Documents may only be available in French for several species found within the Quebec region. The documents and species listed in this table are current as of December 2021. New documents or changes in listings may take place as the recovery planning process progresses.", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+knitr::kable(scheduleOne, align = "l", caption = "Documents containing threat and threat mitigation information for aquatic species that are listed in Schedule 1, if they have been observed in any of the datasets within this Report. Documents included are those formally required by DFO as part of the SARA recovery planning process are provided. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. Some species may have several COSEWIC populations, which may trigger the creation of a separate series of documents for each population. In many of the datasets in this Report, the COSEWIC population may not be known. Instead, documents have been compiled for all COSEWIC populations within the Maritimes region and surrounding area. Readers of the Report should use their best judgment to determine which set of documents may be the most applicable based on the search area. Blank entries in the table may be present for various reasons, for example, the document may still in progress but not yet published, or was not created due to a lack of resources. In addition, some documents may not be required based on the COSEWIC designation. RPAs are typically not created for species with a COSEWIC status of special concern. Recovery Strategies and Action Plans are created for species with a SARA designation of threatened, extirpated or endangered, while Management Plans are instead created for species with a SARA designation of special concern. RPA Research Documents may only be available in French for several species found within the Quebec region. The documents and species listed in this table are current as of December 2021. New documents or changes in listings may take place as the recovery planning process progresses.", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 
 There are three available Threat assessment documents for Schedule 1 species in the Maritimes region. 
@@ -153,11 +151,11 @@ Please refer to the DFO (2014) guidelines for conducting Threat Assessments for 
 The Threat Assessment documents for each species are also provided in the Table captions. Users of the Report should refer to each species document for a full explanation of each table.
 
 ```{r mudpiddock-table, echo = FALSE, results = "asis"}
-knitr::kable(mtcars[1:5,], align = "l", caption = "Threat assessment summary for Atlantic Mud-piddock in Canadian waters based on DFO 2014 guidance (obtained from p. 12 in <https://waves-vagues.dfo-mpo.gc.ca/Library/40868308.pdf)>.", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+knitr::kable(mudPiddockTable, align = "l", caption = "Threat assessment summary for Atlantic Mud-piddock in Canadian waters based on DFO 2014 guidance (obtained from p. 12 in https://waves-vagues.dfo-mpo.gc.ca/Library/40868308.pdf.", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 
 ```{r leatherback-table, echo = FALSE, results = "asis"}
-knitr::kable(mtcars[1:5,], align = "l", caption = "Threat assessment for Leatherback Sea Turtles in the Broader Northwest Atlantic Population and in Atlantic Canadian waters based on DFO (2014) guidance (obtained from pp. 10-11 in <https://waves-vagues.dfo-mpo.gc.ca/Library/40949497.pdf>).", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+knitr::kable(leatherbackTable, align = "l", caption = "Threat assessment for Leatherback Sea Turtles in the Broader Northwest Atlantic Population and in Atlantic Canadian waters based on DFO (2014) guidance (obtained from pp. 10-11 in https://waves-vagues.dfo-mpo.gc.ca/Library/40949497.pdf).", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 Notes:
 
@@ -167,7 +165,7 @@ Notes:
 
 
 ```{r loggerhead-table, echo = FALSE, results = "asis"}
-knitr::kable(mtcars[1:5,], align = "l", caption = "Threat assessment for the Loggerhead Sea Turtle in the Broader Northwest Atlantic Population and in Atlantic Canadian waters based on DFO 2014a guidance (the last three rows represent threats that occur only outside of Canada.) (obtained from p. 11 in <https://waves-vagues.dfo-mpo.gc.ca/Library/40624201.pdf>).", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+knitr::kable(loggerheadTable, align = "l", caption = "Threat assessment for the Loggerhead Sea Turtle in the Broader Northwest Atlantic Population and in Atlantic Canadian waters based on DFO 2014a guidance (the last three rows represent threats that occur only outside of Canada. Obtained from p. 11 in https://waves-vagues.dfo-mpo.gc.ca/Library/40624201.pdf)", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 
 ```
 Notes:
