Removed brackets from author in reference for clearer in-text citations

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -459,7 +459,7 @@ author = {Noreen E. Kelly and Javier Guijarro-Sabaniel and Rebecca Zimmerman},
 }
 
 @misc{IAA,
-  author = {IAA (Impact Assessment Act)},
+  author = {IAA: Impact Assessment Act},
   title = {An Act respecting a federal process for impact assessments and the prevention of significant adverse environmental effects},
   year = {2019},
   howpublished = {Retrieved from https://laws-lois.justice.gc.ca/eng/acts/I-2.75/FullText.html}
